@@ -12,6 +12,9 @@
 	(twittering-http-post-default-sentinel): Likewise.
 	(twittering-http-default-sentinel): Adjust callers.
 
+	* twittering-mode.el (twittering-http-get-list-index-sentinel):
+	Return "" explicitly if user does not have a list.
+
 2010-02-06  Satoshi Yatagawa  <yata_github@y.hauN.org>
 
 	* twittering-mode.el (twittering-http-default-sentinel): New defun
